outputs/spx-test/eoh/2025-07-28_22-52-44/evaluations/problem_eval7890954322392878911_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/spx/tmp/gpt_temp_0_7c0ee79d.py", line 1
    defined as the difference between the closing and opening prices, with the relative strength of the volume, which is the ratio of the current day's volume to the average volume over the last 5 days, aiming to identify stocks likely to continue their movement.}
                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
